fix navbar toggle on mobile

--- a/rckgames/public/css/app.css
+++ b/rckgames/public/css/app.css
@@ -40,35 +40,37 @@ h1,h3,.card-title, #contact .subtitle{
     font-family: 'Open Sans', Arial ;
 }
 
-.navbar{font-size:15px;font-weight: 500;height: 100px;padding-right: 30px!important;}
+.navbar{font-size:15px;font-weight: 500;height: 100px;}
 .navbar-brand {height: 100px;}
 .navbar-brand img{width: 77px; height: 77px;}
 .bg-light{background-color: #fff!important; color: #000!important;}
 .bg-dark{background-color: #000!important; color: #fff!important;}
-.navbar-light{border-bottom: solid 0.5px #D9D9D9;}
-.navbar-dark{border-bottom: solid 0.5px #EFEFEF;}
+.navbar-light, .navbar-light #navbarNav.show{border-bottom: solid 0.5px #D9D9D9;}
+.navbar-dark, .navbar-dark #navbarNav.show{border-bottom: solid 0.5px #EFEFEF;}
+.navbar-light #navbarNav{background-color: #fff;}
+.navbar-dark #navbarNav{background-color: #000;}
 .navbar-light .be-solid-bnw{border-right: solid 0.5px #D9D9D9;}
 .navbar-dark .be-solid-bnw{border-right: solid 0.5px #EFEFEF;}
-.navbar-light .navbar-brand img{
-    filter: invert(0);
-}
-.navbar-dark .navbar-brand img{
-    filter: invert(1);
-}
-.nav-item{
-    font-size: 15px ;
-    font-weight: 500 ;
-}
+.navbar-light .navbar-brand img{filter: invert(0);}
+.navbar-dark .navbar-brand img{filter: invert(1);}
+.nav-item{font-size: 15px ;font-weight: 500 ;}
 .navbar-light.nav-link,.navbar-light a:hover,.navbar-light .nav-item.active a.nav-link{ color: #000!important;}
 .navbar-dark.nav-link,.navbar-dark a:hover,.navbar-dark .nav-item.active a.nav-link{ color: #fff!important;}
 .nav-item.active{border-bottom: solid 2px;}
+.pt-nav{padding-top: 100px;}
+#OpenMenu{margin-right: 30px!important;}
+#navbarNav{padding:0 30px!important;}
 @media (min-width: 992px){
     .navbar-expand-lg .navbar-nav .nav-link {
         padding-right: 15px;
         padding-left: 15px;
     }
 }
-.pt-nav{padding-top: 100px;}
+@media (max-width: 991px){
+    #navbarNav{padding:30px!important;}
+}
+
+
 
 .be-solid-white{border-right: solid 2px #fff;}
 
